--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/darkmode.css">
     <link rel="stylesheet" href="./styles/kola.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </head>
 <body>
 
     <header>
-        <h1>Pokedex</h1>
-        <img src="./assets/img/logos/snorlax.png" alt="">
-        <nav>
-            <a href="">PokeAPI</a>
-        </nav>
-    </header>
+        <div class="headerLeft">
+            <h1>Pokedex</h1>
+        </div>
+        <div class="headerCenter">
+          <img src="./assets/img/logos/snorlax.png" alt="Snorlax Logo">
+        </div>
+        <div class="headerRight">
+          <a href="">PokeAPI</a>
+        </div>
+      </header>
+      
 
-<div class="main-container"></div>
+    <div class="main-container">
+        <div class="card">
+
+        </div>
+    </div>
 
 </body>
 </html>
