--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./styles/darkmode.css">
     <link rel="stylesheet" href="./styles/kola.css">
+    <link rel="stylesheet" href="./styles/pokemoncard.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
 </head>
 <body>
 
@@ -26,10 +25,20 @@
       </header>
       
 
-    <div class="main-container">
-        <div class="card">
-
-        </div>
+    <div class="mainContainer">
+        <div class="card-container">
+            <!-- Deine Karte hier -->
+            <div class="pokemon-card">
+              <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/2.png" alt="Ivysaur" class="pokemon-img">
+              <p class="pokemon-number">N° 2</p>
+              <h2 class="pokemon-name">Ivysaur</h2>
+              <div class="pokemon-types">
+                <span class="type poison">Poison</span>
+                <span class="type grass">Grass</span>
+              </div>
+            </div>
+            
+        </div>   
     </div>
 
 </body>
