added search bar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
           <a href="">PokeAPI</a>
         </div>
       </header>
-      
+    
+      <div class="searchContainer">
+        <input type="text" placeholder="Search your Pokemon" class="searchInput">
+        <button class="searchButton">🔍</button>
+      </div>
 
     <div class="mainContainer">
         <div class="card-container">
