Cleaned up unused code and updated small card render logic

--- a/landing.html
+++ b/landing.html
@@ -18,7 +18,7 @@
     <div class="circle" id="enterBtn">Enter</div>
   </div>
   
-<script src="./scripts/lading.js"></script>
+<script src="./scripts/landing.js"></script>
 
 </body>
 </html>
