--- a/index.html
+++ b/index.html
@@ -32,15 +32,13 @@
     <div class="mainContainer">
         <div class="card_container">
           <div id="pokemon_container"></div> 
-        </div>  
+        </div>
         
-        <div class="overlay" id="overlay"></div>
-        <div id="pokemon_overlay" class="overlay"></div>
+
       </div>
+
+      <div id="pokemon_overlay" class="overlay d_none"></div>
           
-
-
-    </div>
     <script src="./script.js"></script>
     <script src="./scripts/render.js"></script>
 </body>
