simplify getOverlay in overlay.js for clarity

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/pokemoncard.css">
     <link rel="stylesheet" href="./styles/overlay.css">
     <link rel="stylesheet" href="./styles/colors.css">
-    <link rel="stylesheet" href="./styles/pokemon_ball.css">
+    <link rel="stylesheet" href="./styles/floatingpoke.css">
     <link rel="icon" type="image/x-icon" href="./assets/favicon/snorlax.ico">
 </head>
 <body>
