updated loadMore function

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
       <img src="./assets/img/loading/pokeball_animation.svg" alt="Lädt…" class="loader-svg">
     </div>
 
-    <button id="load_more_button" onclick="loadMore()" class="simple_button">Load more Pokemon</button>
+    <div class="load_more_section">
+      <div class="loader_overlay"></div>
+      <button class="btn btn_load_more" id="load_more_button" onclick="loadMore()">Mehr Pokémon laden</button>
+    </div>
 
     <div id="pokemon_overlay" class="overlay d_none"></div>
           
