updated some tweaks

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 
     <header>
         <div class="headerLeft">
-            <h1>Pokedex</h1>
+            <h1>Pokédex</h1>
         </div>
         <div class="headerCenter">
           <img src="./assets/img/logos/snorlax.png" alt="Snorlax Logo">
         </div>
         <div class="headerRight">
-          <a href="https://pokeapi.co/">PokeAPI</a>
+          <a href="https://pokeapi.co/">PokéAPI</a>
         </div>
       </header>
     
       <div class="searchContainer">
-        <input type="text" placeholder="Search your Pokemon" class="searchInput">
+        <input type="text" placeholder="Search your Pokémon" class="searchInput">
         <button class="searchButton">🔍</button>
       </div>
 
@@ -42,7 +42,7 @@
 
     <div class="load_more_section">
       <div class="loader_overlay"></div>
-      <button class="btn btn_load_more" id="load_more_button" onclick="loadMore()">Mehr Pokémon laden</button>
+      <button class="btn btn_load_more" id="load_more_button" onclick="loadMore()">Load more Pokémon</button>
     </div>
 
     <div id="pokemon_overlay" class="overlay d_none"></div>
