add clear button to search bar

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
         </div>
       </header>
     
-      <div class="searchContainer">
+<div class="searchContainer">
         <input type="text" id="searchInput" placeholder="Search your Pokémon" class="searchInput" oninput="handleSearch()">
         <button id="searchButton" class="searchButton" onclick="handleSearch()">🔍</button>
-      </div>      
+        <button id="clearSearch" class="clear_button" onclick="clearSearchInput()" style="display: none;">✕</button>
+      </div>     
 
     <div class="mainContainer">
       <div class="card_container">
