added filter chips with fast clear button

--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
             </div>
           </div>
         </div>
-      </div>     
+
+        <!-- Filter Chips Container -->
+        <div id="filterChipsContainer" class="filterChipsContainer"></div>
+      </div>
 
     <div class="mainContainer">
       <div class="card_container">
